--- a/Cap3/primeiroProjeto/style.css
+++ b/Cap3/primeiroProjeto/style.css
@@ -15,7 +15,7 @@
 
 body {
     display: grid;
-    grid-template: 60px 1fr 8fr 0.5fr 0.5fr 330px 0.5fr 0.5fr 375px 100px 60px/ 1fr 70px 283.375px 406.600px 1fr;
+    grid-template: 60px 200px auto 0.5fr 0.5fr 330px 0.5fr 0.5fr 375px 100px 60px/ 1fr 70px 283.375px 406.600px 1fr;
     padding: 20px 0 20px 0;
     background-color: rgba(255, 166, 0, 0.132);
 }
@@ -72,7 +72,6 @@ div.imgs section {
 
 div.imgs img {
     width: 100%;
-    margin-bottom: 20px;
     background-color: black;
 }
 
@@ -88,7 +87,7 @@ h2 {
 main.primario h2 {
     font-size: 1em;
     color: var(--cor-secundaria);
-    margin-top: 50px;
+    margin-top: 55px;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
@@ -176,4 +175,73 @@ footer p {
     font-weight: bold;
     margin: 0 15px;
     color: black;
+}
+
+@media screen and (max-width: 780px){
+    
+    body {
+        padding: 0;
+        grid-template: 60px 200px auto 1fr 1fr auto 0.5fr 0.5fr auto 100px 60px / auto auto;
+    }
+
+    header {
+        grid-area: 1 / 1 / 2 / -1;
+    }
+
+    div.title1 {
+        grid-area: 2 / 1 / 3 / -1;
+    }
+
+    div.imgs {
+        grid-area: 3 / 1 / 4 / 2; 
+    }
+
+    div.imgs section {
+        width: 80%;
+    }
+
+    main.primario {
+        grid-area: 3 / 2 / 4 / -1;
+        padding-right: 10px;
+    }
+
+    div.title2 {
+        grid-area: 5 / 1 / 6 / -1
+    }
+
+    div.faq {
+        grid-area:  6 / 1 / 7 / -1;
+        padding: 0 10px 0 10px;
+    }
+
+    div.title3 {
+        grid-area: 8 / 1 / 9 / -1
+    }
+    
+    div.imgc {
+        grid-area: 9 / 1 / 10 / 2;
+    }
+
+    div.imgc img {
+        width: 100%;
+        padding: 10px;
+        max-width: 500px;
+    }
+
+    div.contato {
+        grid-area: 9 / 2 / 10 / -2;
+        margin-left: 10px;
+    }
+    
+    div.contato p {
+        padding-right: 10px;
+    }
+
+    div.title1, div.title2, div.title3 {
+        padding-left: 10px;
+    }
+
+    footer {
+        grid-area: 11 / 1 / 12 / -1;
+    }
 }
