--- a/Cap3/forEach&ArrowFunction/style.css
+++ b/Cap3/forEach&ArrowFunction/style.css
@@ -177,6 +177,10 @@ footer p {
     color: black;
 }
 
+.azul {
+    background-color: blue;
+}
+
 @media screen and (max-width: 780px){
     
     body {
